--- a/static/my_style.css
+++ b/static/my_style.css
@@ -51,6 +51,10 @@ input {
     display: block;
 }
 
+#box_picture img{
+    max-width: 45%;
+}
+
 #main_container, #infos_user{
     display: flex;
 }
