unlike DONE + starting all_views and all_likes

--- a/static/my_style.css
+++ b/static/my_style.css
@@ -114,3 +114,50 @@ input {
 #social{
     width: 30%;
 }
+
+#box_history{
+    display: flex;
+}
+
+#history_views{
+    width: 50%;
+}
+
+#history_likes{
+    width: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
