add almost working forgotten pwd feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
             <br/>
             Votre mot de passe : <input type="password" name="password" placeholder=" &middot; &middot; &middot;" required onkeyup="checkSubmit('1', 'password')"/>
             <br/>
-            <a href="#"> Mot de passe oublié?</a>
+            <a href="/forgotten_password"> Mot de passe oublié?</a>
             <br/>
             <input type="submit" name="submit" value="Go !" disabled />
         </form>
