add working feature for reinit pwd

--- a/templates/change_pwd.html
+++ b/templates/change_pwd.html
@@ -9,11 +9,10 @@
 		<p>Please set a new password</p>
 		<form method="post" action="/set_pwd">
 			<input type="hidden" name="hash" value={{hash}}>
-			<input type="password" name="email" placeholder="email"><br/>
-			<input type="password2" name="verify" placeholder="verify"><br/>
+			<input type="password" name="password" placeholder="password"><br/>
+			<input type="password" name="verify" placeholder="verify"><br/>
 			<input type="submit" value="Réinitialiser mot de passe"><br/>
 		</form>
 	{% endblock body %}
 
-        
 </html>
