--- a/templates/profile.html
+++ b/templates/profile.html
@@ -108,6 +108,21 @@
 		
 	<div id="main_container">
 		<div id="box_left">
+			<div class="inline" name="age" {% if infos['is_user_me'] == True %} onmouseenter="displayForm('age')" onmouseleave="unDisplayForm('age')" {% endif %}>
+				<div>Age:</div>
+
+				<p>{{ infos['age'] }}</p>
+				
+				{% if infos['is_user_me'] == True %}
+				<form name="form_age" action="/profile_modifications" method="post" hidden>
+					<input type="number" name="age" placeholder="{{ infos['age'] }}">
+					<input type="hidden" name="username" value="{{ infos['username'] }}">
+					<input type="submit" name="submit" value="Modif.">
+				</form>
+				{% endif %}
+			</div>
+
+
 			<div class="inline" name="sex" {% if infos['is_user_me'] == True %} onmouseenter="displayForm('sex')" onmouseleave="unDisplayForm('sex')" {% endif %}>
 				<div>Sexe:</div>
 
