profile && home pages : block and unblock DONE

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
 							{% if item['status'] == '1'%}
 								<img width="2%" src="{{ url_for('static', filename='status-green.png') }}" alt="online" title="L'utilisateur est en ligne"/>
 							{% else: %}
-								<img width="2%" src="{{ url_for('static', filename='status-red.png') }}" alt="offline" title="L'utilisateur est hors ligne"/>
+								<img width="2%" src="{{ url_for('static', filename='status-red.png') }}" alt="offline" title="L'utilisateur est hoqqrs ligne"/>
 							{% endif%}
 						</p>	
 					</div>
