set sessin expire to 60mins + a bit of CSS ;)

--- a/static/my_style.css
+++ b/static/my_style.css
@@ -10,6 +10,8 @@ html{
     /*Dance To Forget*/
     /*background: linear-gradient(to right, #ff4e50, #f9d423); */
     background-color: white;
+    display: flex;
+    justify-content: center;
 }
 
 hr{
