static folder cleaned out

--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -3,6 +3,6 @@
 	<footer>
 		<hr/>
 		<p>&copy; Copyright ssumodhe &amp; tpayet {{now_year}} &middot; All right reserved.</p>
-		<img width='45px' src="{{ url_for('static', filename='emoji_kitty.png') }}"/>
+		<img width='45px' src="{{ url_for('static', filename='img/emoji_kitty.png') }}"/>
 	</footer>
 </html>
