--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,12 @@
 	{% extends 'layouts/default.html' %}
 
 	{% block css %}
-	<link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='home.css') }}"/>
+	<link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='css/home.css') }}"/>
 	{% endblock css %}
 	
 	{% block title %}Home &middot; {{ super() }}{% endblock title %}
 	{% block script %}
-    <script type="text/javascript" src="{{ url_for('static', filename='home-controller.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/home-controller.js') }}"></script>
     {% endblock script %}
 
 	{% block body %}
@@ -50,9 +50,9 @@
 								{{ item['username']}}
 							</a>
 							{% if item['status'] == '1'%}
-								<img width="2%" src="{{ url_for('static', filename='status-green.png') }}" alt="online" title="L'utilisateur est en ligne"/>
+								<img width="2%" src="{{ url_for('static', filename='img/status-green.png') }}" alt="online" title="L'utilisateur est en ligne"/>
 							{% else: %}
-								<img width="2%" src="{{ url_for('static', filename='status-red.png') }}" alt="offline" title="L'utilisateur est hoqqrs ligne"/>
+								<img width="2%" src="{{ url_for('static', filename='img/status-red.png') }}" alt="offline" title="L'utilisateur est hoqqrs ligne"/>
 							{% endif%}
 						</p>	
 					</div>
