--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 	
     {% block title %}Login &middot; {{ super() }}{% endblock title %}
 	{% block script %}
-    <script type="text/javascript" src="static/index-controller.js"></script>
+    <script type="text/javascript" src="static/js/index-controller.js"></script>
     {% endblock script %}
 
 
