--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -6,6 +6,31 @@
 	{% block title %}Messages &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
+		<div>
+		{%for item in infos:%}
+			<div>
+				<p>
+					<a href="/profile/{{item['username']}}">
+						<img width="5%" src="{{ item['profile_picture'] }}">
+						{{ item['username']}}
+					</a>
+					{% if item['status'] == '1'%}
+						<img width="2%" src="{{ url_for('static', filename='img/status-green.png') }}" alt="online" title="L'utilisateur est en ligne"/>
+					{% else: %}
+						<img width="2%" src="{{ url_for('static', filename='img/status-red.png') }}" alt="offline" title="L'utilisateur est hors ligne"/>
+					{% endif%}
+				</p>	
+			</div>
+		{%endfor%}
+		</div>
+
+		<div>
+			<iframe width="100%" height="450px" src="/dialog"></iframe>
+			<form name="message" method="post" action="">
+				<textarea name="message_area" form="message" rows="2" cols="50"></textarea>
+				<input type="submit" name="submit" value="Envoyer!">
+			</form>
+		</div>
 	{% endblock body %}
 
         
