--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -3,7 +3,14 @@
 
 	{% extends 'layouts/default.html' %}
 	
+	{% block css %}
+	<link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='css/messenger.css') }}"/>
+	{% endblock css %}
+
 	{% block title %}Messages &middot; {{ super() }}{% endblock title %}
+	{% block script %}
+    <script type="text/javascript" src="{{ url_for('static', filename='js/messenger-controller.js') }}"></script>
+    {% endblock script %}
 
 	{% block body %}
 		<div>
@@ -26,8 +33,8 @@
 
 		<div>
 			<iframe width="100%" height="450px" src="/dialog"></iframe>
-			<form name="message" method="post" action="">
-				<textarea name="message_area" form="message" rows="2" cols="50"></textarea>
+			<form id="message" method="post" action="">
+				<textarea name="message_area" form="message" rows="2" cols="50" onkeypress="checkKey(event, 'message')"></textarea>
 				<input type="submit" name="submit" value="Envoyer!">
 			</form>
 		</div>
