--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE HTML>
 <html>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    socket.on('connect', function() {
+        socket.emit('my event', {data: 'I\'m connected!'});
+    });
+</script>
 
 	{% extends 'layouts/default.html' %}
 
