--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-
 	{% extends 'layouts/default.html' %}
-	
 	{% block css %}
 	<link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='css/messenger.css') }}"/>
 	{% endblock css %}
@@ -13,9 +11,10 @@
     {% endblock script %}
 
 	{% block body %}
-		<div>
+	<div id="messages">
+		<div id="who">
 		{%for item in infos:%}
-			<div>
+			<div onclick="defineConv('{{my_username}}', '{{item['username']}}')">
 				<p>
 					<a href="/profile/{{item['username']}}">
 						<img width="5%" src="{{ item['profile_picture'] }}">
@@ -31,13 +30,16 @@
 		{%endfor%}
 		</div>
 
-		<div>
-			<iframe width="100%" height="450px" src="/dialog"></iframe>
-			<form id="message" method="post" action="">
-				<textarea name="message_area" form="message" rows="2" cols="50" onkeypress="checkKey(event, 'message')"></textarea>
-				<input type="submit" name="submit" value="Envoyer!">
+		<div id="display_message">
+			<iframe id="frame" width="100%" height="450px" src=""></iframe>
+			<form id="message" name="message" method="post" action="" hidden="True">
+				<textarea name="message" form="message" rows="2" cols="50" onkeyup="checkKey(event, 'message')"></textarea>
+				<input type="hidden" name="from" value="{{my_username}}">
+				<input id="to" type="hidden" name="to" value="">
+				<input type="submit" value="Envoyer!">
 			</form>
 		</div>
+	</div>
 	{% endblock body %}
 
         
