css arrow ADDED | OUPS wrong branch Sorry :kiss:

--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -25,6 +25,7 @@
 					{% else: %}
 						<img width="2%" src="{{ url_for('static', filename='img/status-red.png') }}" alt="offline" title="L'utilisateur est hors ligne"/>
 					{% endif%}
+					<img width="20px" src="{{ url_for('static', filename='img/right-arrow.png') }}" alt="click here to talk" title="Clique ici pour afficher la conversation."/>
 				</p>	
 			</div>
 		{%endfor%}
