username dynamic - as Totolapaille requested :smile:

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<p>{{ session['user'] }}</p>
+	<p hidden id="my_user_name">{{ session['user'] }}</p>
 	<h1>Bienvenue sur Matcha<br/> le site de soul_match !</h1>
     <p>Aujourd'hui nous sommes le {{date}}, c'est un bon jour pour trouver ton soul_match!</p>
 
