changed default layout of index - has his own

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-	{% extends 'layouts/default.html' %}
+	{% extends 'layouts/index_layout.html' %}
 
 	
     {% block title %}Login &middot; {{ super() }}{% endblock title %}
