--- a/templates/dialog.html
+++ b/templates/dialog.html
@@ -2,39 +2,27 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/messenger.css') }}">
+
 	</head>
 
 	<body>
 		<div id="message">
-			<div class="me">
-				<p>{{exp}} dit : Ma boisson préféré est <del>le vin</del> <ins>l'eau</ins> !</p>
-			</div>
-
-			<div class="dest">
-				<p>{{dest}} dit : !</p>
-			</div>
-			<div class="me">
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-			</div>
-
-			<div class="dest">
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-			</div>
-			<div class="me">
-				<p>Ma boisson préféré est <del>le vin</del> <ins>l'eau</ins> !</p>
-			</div>
-
-			<div class="dest">
-				<p>Ma boisson préféré est <del>le vin</del> <ins>l'eau</ins> !</p>
-			</div>
-			<div class="me">
-				<p>Ma boisson préféré est <del>le vin</del> <ins>l'eau</ins> !</p>
-			</div>
-
-			<div class="dest">
-				<p>Ma boisson préféré est <del>le vin</del> <ins>l'eau</ins> !</p>
-			</div>
+			{%for message in msg:%}
+			{%	if message['from_id'] == from_id:%}
+				<div class="me">
+					<p>{{message['content']}}</p>
+				</div>
+			{%	else:%}
+				<div class="dest">
+					<p>{{message['content']}}</p>
+				</div>
+			{% endif %}
+			{% endfor %}
 		</div>
 	</body>
+
+	<script type="text/javascript">
+		window.scrollTo(0, document.body.clientHeight);
+	</script>
         
 </html>
