--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -32,8 +32,8 @@
 		</div>
 
 		<div id="display_message">
-			<iframe id="frame" width="100%" height="450px" src=""></iframe>
-			<form id="message" name="message" method="post" action="" hidden="True">
+			<iframe id="frame" width="100%" height="450px" src="{{url}}"></iframe>
+			<form id="message" name="message" method="post" action="" {% if url == "":%} hidden="True" {% endif %}>
 				<textarea name="message" form="message" rows="2" cols="50" onkeyup="checkKey(event, 'message')"></textarea>
 				<input type="hidden" name="from" value="{{my_username}}">
 				<input id="to" type="hidden" name="to" value="">
