--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@
 								<img width="5%" src="{{ item['profile_picture'] }}">
 								{{ item['username']}}
 							</a>
-							{% if item['status'] == '1'%}
+							{% if item['status'] == 1%}
 								<img width="2%" src="{{ url_for('static', filename='img/status-green.png') }}" alt="online" title="L'utilisateur est en ligne"/>
 							{% else: %}
 								<img width="2%" src="{{ url_for('static', filename='img/status-red.png') }}" alt="offline" title="L'utilisateur est hoqqrs ligne"/>
