notification: pop-up display + setAsSeen when displayed

--- a/static/css/my_style.css
+++ b/static/css/my_style.css
@@ -134,6 +134,9 @@ input {
 }
 
 .notifications{
+    border-style: dashed;
+    border-color: gainsboro;
+    border-radius: 5%;
     position: fixed;
     top: 20px;
     right: 20px;
