js refresh for instant message in dialog

--- a/templates/dialog.html
+++ b/templates/dialog.html
@@ -23,6 +23,10 @@
 
 	<script type="text/javascript">
 		window.scrollTo(0, document.body.clientHeight);
+
+		setTimeout(function(){
+		   window.location.reload(1);
+		}, 5000);
 	</script>
         
 </html>
