--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
 							{% if item['status'] == 1%}
 								<img width="2%" src="{{ url_for('static', filename='img/status-green.png') }}" alt="online" title="L'utilisateur est en ligne"/>
 							{% else: %}
-								<img width="2%" src="{{ url_for('static', filename='img/status-red.png') }}" alt="offline" title="L'utilisateur est hoqqrs ligne"/>
+								<img width="2%" src="{{ url_for('static', filename='img/status-red.png') }}" alt="offline" title="L'utilisateur est hors ligne"/>
 							{% endif%}
 						</p>	
 					</div>
