--- a/static/css/my_style.css
+++ b/static/css/my_style.css
@@ -133,12 +133,22 @@ input {
     font-size: x-small;
 }
 
+#notif{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+
 .notifications{
     border-style: dashed;
     border-color: gainsboro;
     border-radius: 5%;
-    position: fixed;
-    width: 25%;
+    background-color: white;
+    margin: 2% 0 2% 0;
 }
 
 
