--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,10 @@
 				{% endfor %}
 			</div>
 		</div>
+
+		<div id='notif'>
+		</div>
+		
 	{% endblock body %}
 	{% block script %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/home-controller.js') }}"></script>    
