--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,13 @@
 	{% block title %}Compte &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
+	{% if error != None :%}
+	    <div id='error'>
+	        <p>
+	           {{ error }} 
+	        </p>
+	    </div>
+    {% endif %}
 	<div>
 		<div id="box_picture" {% if infos['is_user_me'] == True %} onmouseenter="displayForm('picture_1')" onmouseleave="unDisplayForm('picture_1')" {% endif %}>
 			<img src="{{ infos['picture_1'] }}"/>
