remove home.css from home.html AND create profile.css for profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,10 @@
 	
 	{% block title %}Compte &middot; {{ super() }}{% endblock title %}
 
+	{% block css %}
+	<link rel="stylesheet" type="text/css"  href="{{ url_for('static', filename='css/profile.css') }}"/>
+	{% endblock css %}
+
 	{% block body %}
 	{% if error != None :%}
 	    <div id='error'>
