error and all_ok messages correctly displayed

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 	{% block body %}
     
-    {% if 'error' != None :%}
+    {% if error != None :%}
     <div id='error'>
         <p>
            {{ error }} 
@@ -18,7 +18,7 @@
     </div>
     {% endif %}
 
-    {% if 'all_ok' != None : %}
+    {% if all_ok != None : %}
     <div id='all_ok'>
         <p>
            {{ all_ok }} 
