--- a/static/css/my_style.css
+++ b/static/css/my_style.css
@@ -42,6 +42,10 @@ input {
     margin: 2px 0 2px 0;
 }
 
+#all_ok{
+    background-color: rgba(153, 255, 51, 0.4);
+}
+
 #error{
     background-color: rgba(199, 0, 57, 0.4);
 }
