appropriate CSS for those templates

--- a/templates/profile_not_complete.html
+++ b/templates/profile_not_complete.html
@@ -6,8 +6,10 @@
 	{% block title %}Profile Not Complete &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
+	<div id="all_ok">
 		<p>Cet utilisateur n'a pas correctement rempli ses informations. <br>
 		Vous ne pouvez donc pas consulter sa page.</p>
+	</div>
 	{% endblock body %}
 
         
