--- a/templates/profile_not_exists.html
+++ b/templates/profile_not_exists.html
@@ -6,7 +6,9 @@
 	{% block title %}Profile Not Complete &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
+	<div id="error">
 		<p>Cet utilisateur n'existe pas.</p>
+	</div>
 	{% endblock body %}
 
         
