add div id notif in layout_default for notif display on each page

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -26,6 +26,8 @@
 	{% endblock body %}
 
 	{% include 'layouts/footer.html' %}
+	<div id='notif'>
+	</div>
 </body>
 
 <script type="text/javascript" src="{{ url_for('static', filename='js/notification-controller.js') }}"></script>
