--- a/static/css/my_style.css
+++ b/static/css/my_style.css
@@ -9,7 +9,7 @@ html{
     /*background: linear-gradient(to right, #70e1f5, #ffd194); */
     /*Dance To Forget*/
     /*background: linear-gradient(to right, #ff4e50, #f9d423); */
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.021);
     display: flex;
     justify-content: center;
 }
@@ -18,9 +18,12 @@ hr{
     color: black;
 }
 
-/* A VIRER !! */
-div{
-    border-style: solid;
+nav ul li{
+    list-style: none;
+}
+
+nav a{
+    text-decoration: none;
 }
 
 #index-login{
@@ -108,7 +111,7 @@ input {
     padding-left: 10%;
     display: flex;
     flex-direction: column;
-    border-color: black;/* A VIRER !! */
+    /*border-color: black;*/
 }
 
 #username, #pop_score{
@@ -157,6 +160,25 @@ input {
     border-radius: 5%;
     background-color: white;
     margin: 2% 0 2% 0;
+}
+
+#results{
+    margin: auto 0 auto 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+div.result_table{
+    width: 40%;
+    border-bottom-width: 1px;
+    margin: 2% 2% 2% 0;
+}
+
+div.result_table a{
+    color: black;
+    text-decoration: none;
 }
 
 
