--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,7 +1,3 @@
-div{
-	border-style: none;
-}
-
 .inline{
 	padding: 10px 10px 10px 10px;
 	border-bottom: 1px solid gainsboro;
@@ -9,6 +5,82 @@ div{
 
 form{
 	margin-left: 10px;
+}
+
+#box_picture img{
+    max-width: 45%;
+}
+
+.like_button{
+    width: 10%;
+    min-width: 4px;
+}
+
+#main_container, #infos_user{
+    display: flex;
+}
+
+#box_left{
+    margin: auto;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.inline{
+    display: inline-flex;
+    margin: 0px 5px 0px 5px;
+    justify-content: center;
+}
+
+#box_right{
+    margin: 5px 10px 5px 10px;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#box_right img{
+    margin: 5px 10% 5px 10%;
+    border-style: solid;
+    border-color: gainsboro;
+    max-width: 50%;
+}
+
+#profile{
+    width: 70%;
+    text-align: left;
+    padding-left: 10%;
+    display: flex;
+    flex-direction: column;
+    /*border-color: black;*/
+}
+
+#username, #pop_score{
+    font-weight: bold;
+    font-size: x-large;
+}
+
+#first_name, #last_name{
+    font-style: italic;
+    font-size: medium;
+}
+
+#social{
+    width: 30%;
+}
+
+#box_history{
+    display: flex;
+}
+
+#history_views{
+    width: 50%;
+}
+
+#history_likes{
+    width: 50%;
 }
 
 #infos_user, #box_history{
